[project]
name = "insightai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "pytube>=15.0.0",
    "requests>=2.33.0",
    "streamlit>=1.55.0",
    "unstructured>=0.22.6",
    "validators==0.28.1",
    "youtube-transcript-api>=1.2.4",
]
